AUGREL/src/objects/TFS_Activity__c.object
<CustomObject>
    <description>Contains important data on customer activity</description>
    <fields>
        <fullName>ANI__c</fullName>
        <label>ANI</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Abbreviated_Consent_Date__c</fullName>
        <label>Abbreviated Consent Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Abbreviated_Consent__c</fullName>
        <label>Abbreviated Consent</label>
        <picklist>
            <picklistValues>
                <fullName>Y</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>AccountId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>Activities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AccountId_del__c</fullName>
        <label>AccountId</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Action__c</fullName>
        <description>This is the Action field that controls the Action Category Topic combination been leveraged for TFS</description>
        <label>Action</label>
        <picklist>
            <picklistValues>
                <fullName>Edit Profile</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Start Process</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Request Information</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Request Documentation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Log Complaint</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sales Lead</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Call to Action</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Address_Type__c</fullName>
        <label>Address Type</label>
        <picklist>
            <picklistValues>
                <fullName>Garage</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bill To</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Affiliate_Marketing_Privacy__c</fullName>
        <label>Affiliate Marketing Privacy</label>
        <picklist>
            <picklistValues>
                <fullName>OUT</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>All_Privacy_Options__c</fullName>
        <description>This field is required by TIBCO</description>
        <label>All Privacy Options</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Alternate_Contact__c</fullName>
        <description>Alternate Contact for C&amp;D</description>
        <inlineHelpText>Alternate Contact for C&amp;D</inlineHelpText>
        <label>Alternate Contact</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Billing_Zip_Code_Extn__c</fullName>
        <label>Billing Zip Code Extn</label>
        <length>6</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CONN_ID__c</fullName>
        <label>CONN ID</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Case_Action__c</fullName>
        <formula>TEXT(Case__r.Action__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Case Action</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Case_Category__c</fullName>
        <formula>TEXT(Case__r.Category__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Case Category</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Case_Topic__c</fullName>
        <formula>TEXT(Case__r.Service_Request_Type__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Case Topic</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Case__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to Case Object</description>
        <inlineHelpText>Lookup to Case Object</inlineHelpText>
        <label>Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Activities</relationshipLabel>
        <relationshipName>Activities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Category__c</fullName>
        <description>This is the Category field that is used the ACT combination been leveraged for TFS</description>
        <label>Category</label>
        <picklist>
            <controllingField>Action__c</controllingField>
            <picklistValues>
                <fullName>Communications</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Contract Modifications</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Credit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fees</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Insurance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Self Service Technical Difficulty</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1099</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lease End</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Excess Wear &amp; Use</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Account Profile Update</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Customer Profile Update</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Customer Experience</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Legal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Maturity</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Finance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Collections</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Payments</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Title</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Account History</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Billing Statement</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TFS/LFS Bank</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Debt Management</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Loyalty/Retention</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Programs</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Certified_Used__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Certified Used</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Communication_Comments__c</fullName>
        <label>Communication Comments</label>
        <length>500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Confirmation_Number__c</fullName>
        <description>Confirmation Number from the Western Union Payment Screen</description>
        <inlineHelpText>Confirmation Number from the Western Union Payment Screen</inlineHelpText>
        <label>Confirmation Number</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ContactId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Activities</relationshipLabel>
        <relationshipName>Contacts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Contact_Name__c</fullName>
        <description>Actual Name of the individual with whom the Agent is corresponding to regarding this activity.</description>
        <inlineHelpText>Actual Name of the individual with whom the Agent is corresponding to regarding this activity.</inlineHelpText>
        <label>Contact Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Credit_App_Reporting_Privacy__c</fullName>
        <label>Credit App/Reporting Privacy</label>
        <picklist>
            <picklistValues>
                <fullName>OUT</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Current_Active_duty_end_date__c</fullName>
        <label>Current Active Duty End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Current_Active_duty_start_date__c</fullName>
        <label>Current Active Duty Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Current_Address_Name__c</fullName>
        <label>Current Address Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Current_Address__c</fullName>
        <label>Current Address</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Current_CO_BK_Case_number__c</fullName>
        <label>Current BK Case Number</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Current_CO_BK_Code__c</fullName>
        <label>Current BK Code</label>
        <picklist>
            <picklistValues>
                <fullName>A</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>B</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>C</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>E</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>F</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>G</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>H</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>I</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>J</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>K</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>L</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>M</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>O</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>P</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Q</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>R</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>S</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>V</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>D</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Current_CO_BK_District__c</fullName>
        <label>Current BK District</label>
        <picklist>
            <picklistValues>
                <fullName>AK001</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ALM01</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ALM02</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ALN01</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ALN02</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ALN03</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ALN04</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ALS01</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ARE01</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ARE02</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ARE03</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ARE04</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ARE05</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ARW01</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ARW02</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ARW03</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ARW04</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ARW05</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ARW06</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ARW07</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AZ001</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AZ002</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AZ003</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CAC01</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CAC02</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CAC03</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CAC04</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CAC05</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CAE01</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CAE02</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Current_CO_BK_Filing_date__c</fullName>
        <label>Current BK Filing Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Current_Care_Of__c</fullName>
        <label>Current Care Of</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Current_City__c</fullName>
        <label>Current City</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Current_Email_Address__c</fullName>
        <label>Current Email Address</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Current_Home_Number_DNC__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Current Home Number DNC</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Current_Home_Number_INVALID__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Current Home Number INVALID</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Current_Home_Number_MOBILE__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Current Home Number MOBILE</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Current_Home_Number__c</fullName>
        <label>Current Home Number</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Current_Identity_Theft_Indicator_Flag__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Current Identity Theft Indicator Flag</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Current_Mileage__c</fullName>
        <label>Current Mileage</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Current_Mobile_Number_DNC__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Current Mobile Number DNC</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Current_Mobile_Number_INVALID__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Current Mobile Number INVALID</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Current_Mobile_Number_MOBILE__c</fullName>
        <defaultValue>false</defaultValue>
        <description>SRC: SFDC
INT: Informatica UCM Update 
Trans: N 
BU: Legal and Compliance requirements for TFS auto dialer 
FD: This field is used to save the old value of the field &apos;Mobile Phone is Mobile&apos; from FAC object (CP 2401)</description>
        <label>Current Mobile Number MOBILE</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Current_Mobile_Number__c</fullName>
        <description>For Service Request field change.</description>
        <label>Current Mobile Number</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Current_Service_branch__c</fullName>
        <label>Current Military Service Branch</label>
        <picklist>
            <picklistValues>
                <fullName>Air Force Active Duty</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Air Force Reserve</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Air National Guard</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Army Active Duty</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Army National Guard</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Army Reserve</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Coast Guard Active Duty</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Coast Guard Reserve</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Marine Corps Reserve</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Marines Corps Active Duty</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Navy Active Duty</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Navy Reserve</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Public Health Services</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Current_Servicing_Email__c</fullName>
        <label>Current Servicing Email</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Current_State__c</fullName>
        <label>Current State</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Current_Work_Number_DNC__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Current Work Number DNC</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Current_Work_Number_INVALID__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Current Work Number INVALID</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Current_Work_Number_MOBILE__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Current Work Number MOBILE</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Current_Work_Number__c</fullName>
        <label>Current Work Number</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Current_Zip_Code_Extn__c</fullName>
        <label>Current Zip Code Extn</label>
        <length>6</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Current_Zipcode__c</fullName>
        <label>Current Zipcode</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Data_Consent__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Generice Data Consent Checkbox for Loyalty</description>
        <label>Sales Lead Consent</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Date_of_Complaint__c</fullName>
        <label>Date of Complaint</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Dealer__c</fullName>
        <label>Dealer</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Dealership__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Dealership</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.RecordType.Name</field>
                <operation>equals</operation>
                <value>Dealer</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Activities (Dealership)</relationshipLabel>
        <relationshipName>DealershipActivity</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Electronic_Business_Agreement_Date__c</fullName>
        <label>Electronic Business Agreement Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Electronic_Business_Agreement__c</fullName>
        <label>Electronic Business Agreement</label>
        <picklist>
            <picklistValues>
                <fullName>Y</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Finance_Reason__c</fullName>
        <label>Finance Reason</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Financial_Account_Customer_ID__c</fullName>
        <label>Financial Account Customer ID</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Financial_Account_Customer__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Financial Account Customer</label>
        <referenceTo>Financial_Account_Customer__c</referenceTo>
        <relationshipLabel>Activities</relationshipLabel>
        <relationshipName>Activities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Financial_Account__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Financial Account</label>
        <referenceTo>Financial_Account__c</referenceTo>
        <relationshipLabel>Activities</relationshipLabel>
        <relationshipName>Activities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Garage_Zip_Code_Extn__c</fullName>
        <label>Garage Zip Code Extn</label>
        <length>6</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Good_Thru_Date__c</fullName>
        <description>10 days from Process day</description>
        <label>Good Thru Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Gross_Payoff__c</fullName>
        <label>Gross Payoff</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Immediate_Action__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Immediate Action</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Integration_ID__c</fullName>
        <externalId>true</externalId>
        <label>Integration ID</label>
        <length>80</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Language_Preference__c</fullName>
        <label>Language Preference</label>
        <picklist>
            <picklistValues>
                <fullName>English</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Spanish</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Doc Trans May Be Required</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Last_Comment__c</fullName>
        <description>This field is created as required by TIBCO for integration</description>
        <label>Last Comment</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_Modified_by_Lan_Id__c</fullName>
        <label>Last Modified by Lan Id</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Make__c</fullName>
        <label>Make</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Marketing_Comm_Pref_Email__c</fullName>
        <label>Marketing Comm Pref Email</label>
        <picklist>
            <picklistValues>
                <fullName>N</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Marketing_Comm_Pref_Home_Phone__c</fullName>
        <label>Marketing Comm Pref Home Phone</label>
        <picklist>
            <picklistValues>
                <fullName>N</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Marketing_Comm_Pref_Mobile_Phone__c</fullName>
        <label>Marketing Comm Pref Mobile Phone</label>
        <picklist>
            <picklistValues>
                <fullName>N</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Marketing_Comm_Pref_Text__c</fullName>
        <label>Marketing Comm Pref Text</label>
        <picklist>
            <picklistValues>
                <fullName>N</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Marketing_Comm_Pref_Work_Phone__c</fullName>
        <label>Marketing Comm Pref Work Phone</label>
        <picklist>
            <picklistValues>
                <fullName>N</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Net_Payoff__c</fullName>
        <label>Net Payoff</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>New_Active_duty_end_date__c</fullName>
        <label>New Active Duty End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>New_Active_duty_start_date__c</fullName>
        <label>New Active Duty Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>New_Address_Name__c</fullName>
        <label>New Address Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>New_Address__c</fullName>
        <label>New Address</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>New_CO_BK_Case_number__c</fullName>
        <label>New BK Case Number</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>New_CO_BK_Code__c</fullName>
        <label>New BK Code</label>
        <picklist>
            <picklistValues>
                <fullName>A</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>B</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>C</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>F</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>G</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>H</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>I</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>J</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>K</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>L</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>M</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>O</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>P</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Q</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>R</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>S</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>V</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>D</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>E</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>New_CO_BK_District__c</fullName>
        <label>New BK District</label>
        <picklist>
            <picklistValues>
                <fullName>AK001</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ALM01</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ALM02</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ALN01</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ALN02</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ALN03</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ALN04</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ALS01</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ARE01</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ARE02</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ARE03</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ARE04</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ARE05</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ARW01</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ARW02</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ARW03</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ARW04</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ARW05</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ARW06</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ARW07</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AZ001</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AZ002</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AZ003</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CAC01</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CAC02</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CAC03</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CAC04</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CAC05</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CAE01</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CAE02</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>New_CO_BK_Filing_date__c</fullName>
        <label>New BK Filing Date</label>
        <type>Date</type>
    </fields>
</CustomObject>